--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.0",
     "@types/pg": "^8.15.5",
